# 2026

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOY.md  pyproject.toml
config/: ecom_prompts.py  prompts.py  settings.py  watch_list.yaml  workflows.yaml
daily-briefing/: deep_absorb.py  group_chat_summary.py  notify_feishu.py  run_briefing.sh  run_nightly_review.sh  run_proactive_check.sh
docs/: architecture.md  evolution-system-design.md
scripts/: check_worker.sh  claude_runner.py  daily_video_crawl.sh  ecom_auto_scan.py  full_deploy.sh  generate_comic.py  generate_fix_tasks.py  generate_xiyou_concept.py  health_check.py  install_service.sh  instreet_patrol.py  oil_monitor.py  proactive_reminder.py  proactive_reminder.sh  reindex_vault.py  run_daily_evolution.sh  run_daily_video_crawl.py  run_group_report.sh  run_hot_briefing.sh  run_instreet_patrol.sh  run_morning_followup.py  run_task_scheduler.sh  run_weekly_synthesis.sh  seed_evolution_tasks.py  send_comic_to_feishu.py  spawn_worker.sh  stock_monitor.py  task_runner.py  task_runner.sh  weekly_prompt_learning.sh  weekly_synthesis.py
src/: adb_bot.py  bitable_factory.py  bitable_templates.py  brain.py  brain_manager.py  capability_manager.py  chart_generator.py  checkpoint.py  concurrency.py  contact_memory.py  daily_evolution.py  daily_group_report.py  daily_hot_briefing.py  feishu_bitable.py  feishu_docs.py  feishu_listener.py  feishu_sender.py  feishu_sheets.py  file_handler.py  group_memory.py  long_task.py  main.py  mcp_server.py  memory_compressor.py  message_router.py  pattern_detector.py  (+17 more)
(+116 files in other folders)
