[project]
name = "happycode-knowledge"
version = "0.1.0"
description = "Personal knowledge management: Feishu → AI analysis → Obsidian"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.5.0",
    "anthropic>=0.40.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "readability-lxml>=0.8",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "playwright>=1.40",
]

[project.scripts]
happycode = "src.main:main"
