[project]
name = "happycode-knowledge"
version = "0.1.0"
description = "Personal knowledge management: Feishu → AI analysis → Obsidian"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.5.0",
    "openai>=1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "readability-lxml>=0.8",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "playwright>=1.40",
]

[project.scripts]
happycode = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src", "config"]
omit = ["src/main.py", "src/mcp_server.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
